# usbd-hid-device

./: Cargo.toml  README.md
src/: hidclass.rs  lib.rs
