[package]
name = "usbd-hid-device"
description = "USB HID class support for microcontrollers"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["hid", "no-std", "usb-device"]
authors = ["Alexey Galakhov <agalakhov@gmail.com>"]
repository = "https://github.com/agalakhov/usbd-hid-device"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.1.1"

[dependencies]
embedded-hal = "0.2.3"
usb-device = "0.2.3"

[dev-dependencies]
stm32f3xx-hal = { version = "0.4.0", features = [ "stm32f303xc", "rt", "stm32-usbd" ] }
